--- a/MerlionPortal/MerlionPortal-war/web/grns/allmybids.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/grns/allmybids.xhtml
@@ -50,7 +50,7 @@
         <ui:define name="right">
             <p:breadCrumb>
                 <p:menuitem value="GRNS Home" url="grnsindexpage.xhtml" />
-                <p:menuitem value="View All My Biddings" url="allmybids.xhtml" />
+                <p:menuitem value="View All My Bids" url="allmybids.xhtml" />
             </p:breadCrumb>
             <h:form id="form">
                 <p:panel  header="My Biddings"  style="margin-bottom:20px">
