--- a/MerlionPortal/MerlionPortal-war/web/grns/allmyposts.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/grns/allmyposts.xhtml
@@ -48,11 +48,10 @@
         </ui:define>
 
         <ui:define name="right">
-            <h3 style="margin-top:0">Aggregate Service Requests</h3>
             <h:form>
                 <p:breadCrumb>
                     <p:menuitem value="GRNS Home" url="grnsindexpage.xhtml" />
-                    <p:menuitem value="All Posts" url="allmyposts.xhtml" /> 
+                    <p:menuitem value="All My Auctions" url="allmyposts.xhtml" /> 
                 </p:breadCrumb>
                 <p:tabView>
                     <p:tab title="Active Transportation Posts">
