--- a/MerlionPortal/MerlionPortal-war/web/grns/postmyspace.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/grns/postmyspace.xhtml
@@ -50,7 +50,7 @@
         <ui:define name="right">
             <p:breadCrumb>
                 <p:menuitem value="GRNS Home" url="grnsindexpage.xhtml" />
-                <p:menuitem value="Post space" url="postmyspace.xhtml" /> 
+                <p:menuitem value="Auction Spare Space" url="postmyspace.xhtml" /> 
             </p:breadCrumb>
             <p:tabView>
 
@@ -113,7 +113,7 @@
 
                         </p:panel>
                         <br></br>
-                        <p:commandButton action="#{postSpaceManagedBean.postRequest()}" value="Post" /> 
+                        <p:commandButton action="#{postSpaceManagedBean.postRequest()}" value="Post Auction" /> 
                         <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
                         <div><p:spacer width="20" height="20" /></div>
                     </h:form>
