Fixed typo- Manli

--- a/MerlionPortal/MerlionPortal-war/web/grns/postmyspace.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/grns/postmyspace.xhtml
@@ -119,7 +119,7 @@
                     </h:form>
 
                 </p:tab>
-                <p:tab title="Warhhouse Space">
+                <p:tab title="Warehouse Space">
                     <h:form id="summitable2" >
 
                         <h:panelGrid columns="1" cellpadding="10" width="100%">
