--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewoperatorschedule.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewoperatorschedule.xhtml
@@ -58,7 +58,7 @@
                             <p:menuitem value="Operator List" url="viewalloperator.xhtml" />
                         </p:submenu>
                         <p:submenu label="Operator Schedule" >
-                            <p:menuitem value="Add A Operator Schedule" url="addnewoperatorschedule.xhtml" />
+                            <p:menuitem value="Add A Operator Schedule" url="addnewoperatorschedule.xhtml" style="background:#aa5050; color:white"/>
                             <p:menuitem value="View All Operator Schedule" url="viewalloperatorschedule.xhtml" />
                         </p:submenu>
                     </c:if>
