--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewtorder.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewtorder.xhtml
@@ -68,7 +68,7 @@
                             <c:if test="#{dashboardBean.checkTMSCanManageTransportationOrder()||dashboardBean.loginedUser.userType == 'superuser'}">
                                 <p:menuitem value="Run Cost Simulation" url="runestimation.xhtml" />
                                 <p:menuitem value="View Past Simulations" url="viewestimation.xhtml" />
-                                <p:menuitem value="Create Transportation Order" url="addnewtorder.xhtml" />
+                                <p:menuitem value="Create Transportation Order" url="addnewtorder.xhtml" style="background:#aa5050; color:white"/>
                                 <p:menuitem value="View All Orders" url="viewalltorder.xhtml" />
                             </c:if>
                             <p:menuitem value="Track Order Information" url="viewalllog.xhtml"/>
