--- a/MerlionPortal/MerlionPortal-war/web/tms/transportationservicefulfillmentcheck.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/transportationservicefulfillmentcheck.xhtml
@@ -86,7 +86,7 @@
                             <p:menuitem value="View All Request" url="viewallrequest.xhtml" />
                         </p:submenu>
                         <p:submenu label="Transportation Service Fulfillment Check" >
-                            <p:menuitem value="Fulfillment Check" url="transportationservicefulfillmentcheck.xhtml" />
+                            <p:menuitem value="Fulfillment Check" url="transportationservicefulfillmentcheck.xhtml" style="background:#aa5050; color:white"/>
                         </p:submenu>
                     </c:if>
                 </p:menu>
