--- a/MerlionPortal/MerlionPortal-war/web/tms/viewalloperatorschedule.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewalloperatorschedule.xhtml
@@ -59,7 +59,7 @@
                         </p:submenu>
                         <p:submenu label="Operator Schedule" >
                             <p:menuitem value="Add A Operator Schedule" url="addnewoperatorschedule.xhtml" />
-                            <p:menuitem value="View All Operator Schedule" url="viewalloperatorschedule.xhtml" />
+                            <p:menuitem value="View All Operator Schedule" url="viewalloperatorschedule.xhtml" style="background:#aa5050; color:white"/>
                         </p:submenu>
                     </c:if>
 
