--- a/MerlionPortal/MerlionPortal-war/web/tms/viewallrequest.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewallrequest.xhtml
@@ -80,7 +80,7 @@
                     <c:if test="#{dashboardBean.checkTMSCanManageTransportationOrder()||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label="Transportation Request" >
                             <p:menuitem value="Create A Transportation Request" url="addnewrequest.xhtml" />
-                            <p:menuitem value="View All Request" url="viewallrequest.xhtml" />
+                            <p:menuitem value="View All Request" url="viewallrequest.xhtml" style="background:#aa5050; color:white"/>
                         </p:submenu>
                         <p:submenu label="Transportation Service Fulfillment Check" >
                             <p:menuitem value="Fulfillment Check" url="transportationservicefulfillmentcheck.xhtml" />
