--- a/MerlionPortal/MerlionPortal-war/web/tms/viewallroute.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewallroute.xhtml
@@ -25,8 +25,8 @@
                     <c:if test="#{dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label ="Map Settings">
                             <p:menuitem value="Add A Node" url="addnewnode.xhtml"/>
-                            <p:menuitem value="Add A Route" url="addnewroute.xhtml"/>
-                            <p:menuitem value="View Connections" url="viewconnection.xhtml"/>
+                            <p:menuitem value="Add A Route" url="addnewroute.xhtml" />
+                            <p:menuitem value="View Connections" url="viewconnection.xhtml"style="background:#aa5050; color:white"/>
                         </p:submenu>
                     </c:if>  
                     <p:submenu label =" Manage Your Transportation">
