--- a/MerlionPortal/MerlionPortal-war/web/tms/viewalltasset.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewalltasset.xhtml
@@ -39,7 +39,7 @@
                         </p:submenu>
                         <p:submenu label="Transportation Asset Management" >
                             <p:menuitem value="Add Transportation Assets" url="addnewtasset.xhtml" />
-                            <p:menuitem value="Location Dashboard" url="viewalltasset.xhtml" />
+                            <p:menuitem value="Location Dashboard" url="viewalltasset.xhtml" style="background:#aa5050; color:white"/>
                         </p:submenu>
                         <p:submenu label="Asset Dispatching" >
                             <p:menuitem value="Dispatch a Asset" url="addnewtassetschedule.xhtml" />
