--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewlocation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewlocation.xhtml
@@ -35,7 +35,7 @@
 
                     <c:if test="#{dashboardBean.checkTMSCanManageTransportationAsset() ||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label="Location" >
-                            <p:menuitem value="Add A Location" url="addnewlocation.xhtml"/>
+                            <p:menuitem value="Add A Location" url="addnewlocation.xhtml" style="background:#aa5050; color:white"/>
                             <p:menuitem value="View All Locations" url="viewalllocation.xhtml"/>
                         </p:submenu>
                         <p:submenu label="Transportation Asset Management" >
