--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewoperator.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewoperator.xhtml
@@ -54,7 +54,7 @@
                     </c:if>
                     <c:if test="#{dashboardBean.checkTMSCanUseHRFunction() ||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label="Human Resource Management" >
-                            <p:menuitem value="New Operator" url="addnewoperator.xhtml"  />
+                            <p:menuitem value="New Operator" url="addnewoperator.xhtml" style="background:#aa5050; color:white" />
                             <p:menuitem value="Operator List" url="viewalloperator.xhtml" />
                         </p:submenu>
                         <p:submenu label="Operator Schedule" >
