--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewroute.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewroute.xhtml
@@ -25,7 +25,7 @@
                     <c:if test="#{dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label ="Map Settings">
                             <p:menuitem value="Add A Node" url="addnewnode.xhtml"/>
-                            <p:menuitem value="Add A Route" url="addnewroute.xhtml"/>
+                            <p:menuitem value="Add A Route" url="addnewroute.xhtml" style="background:#aa5050; color:white"/>
                             <p:menuitem value="View Connections" url="viewconnection.xhtml"/>
                         </p:submenu>
                     </c:if>  
