--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewtassetschedule.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewtassetschedule.xhtml
@@ -42,7 +42,7 @@
                             <p:menuitem value="Location Dashboard" url="viewalltasset.xhtml" />
                         </p:submenu>
                         <p:submenu label="Asset Dispatching" >
-                            <p:menuitem value="Dispatch a Asset" url="addnewtassetschedule.xhtml" />
+                            <p:menuitem value="Dispatch a Asset" url="addnewtassetschedule.xhtml" style="background:#aa5050; color:white"/>
                             <p:menuitem value="View Current Tasks" url="viewalltassetschedule.xhtml" />
                         </p:submenu>
                     </c:if>
