--- a/MerlionPortal/MerlionPortal-war/web/tms/viewallnode.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewallnode.xhtml
@@ -24,7 +24,7 @@
                 <p:menu>
                     <c:if test="#{dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label ="Map Settings">
-                            <p:menuitem value="Add A Node" url="addnewnode.xhtml"/>
+                            <p:menuitem value="Add A Node" url="addnewnode.xhtml" style="background:#aa5050; color:white"/>
                             <p:menuitem value="Add A Route" url="addnewroute.xhtml"/>
                             <p:menuitem value="View Connections" url="viewconnection.xhtml"/>
                         </p:submenu>
