--- a/MerlionPortal/MerlionPortal-war/web/tms/viewestimation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewestimation.xhtml
@@ -67,7 +67,7 @@
                         <p:submenu label="Transportation Order" >
                             <c:if test="#{dashboardBean.checkTMSCanManageTransportationOrder()||dashboardBean.loginedUser.userType == 'superuser'}">
                                 <p:menuitem value="Run Cost Simulation" url="runestimation.xhtml" />
-                                <p:menuitem value="View Past Simulations" url="viewestimation.xhtml" />
+                                <p:menuitem value="View Past Simulations" url="viewestimation.xhtml" style="background:#aa5050; color:white"/>
                                 <p:menuitem value="Create Transportation Order" url="addnewtorder.xhtml" />
                                 <p:menuitem value="View All Orders" url="viewalltorder.xhtml" />
                             </c:if>
