--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewrequest.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewrequest.xhtml
@@ -35,9 +35,9 @@
                         <p:menuitem value="TMS Home" url="tmsindex.xhtml"/>
                     </p:submenu>                   
                     <c:if test="#{dashboardBean.checkTMSCanManageTransportationAsset() ||dashboardBean.loginedUser.userType == 'superuser'}">
-                        <p:submenu label="Location" >
-                            <p:menuitem value="Add A Location" url="addnewlocation.xhtml"/>
-                            <p:menuitem value="View All Locations" url="viewalllocation.xhtml"/>
+                        <p:submenu label="Facilities Management" >
+                            <p:menuitem value="Add New Facility" url="addnewlocation.xhtml"/>
+                            <p:menuitem value="View All Facilities" url="viewalllocation.xhtml"/>
                         </p:submenu>
                         <p:submenu label="Transportation Asset Management" >
                             <p:menuitem value="Add Transportation Assets" url="addnewtasset.xhtml" />
@@ -94,9 +94,9 @@
 
         <ui:define name="right">
             <p:breadCrumb>
-                <p:menuitem value="CRMS Home" url="crmsindex.xhtml" />
-                <p:menuitem value="View All Orders" url="viewallservicepos.xhtml" />
-                <p:menuitem value="Generate Service Invoice" url="generateserviceinvoice.xhtml" />
+                <p:menuitem value="TMS Home" url="tmsindex.xhtml" />
+                <p:menuitem value="Transportation Request" url="tmsindex.xhtml" />
+                <p:menuitem value="Create A Transportation Request" url="addnewrequest.xhtml" />
             </p:breadCrumb>
             <p:panel id="basic" header="Create Transportation Request" style="margin-bottom:20px">
                 <h:form id="form">
