--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewtasset.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewtasset.xhtml
@@ -33,16 +33,16 @@
                         <p:menuitem value="TMS Home" url="tmsindex.xhtml"/>
                     </p:submenu>                    
                     <c:if test="#{dashboardBean.checkTMSCanManageTransportationAsset() ||dashboardBean.loginedUser.userType == 'superuser'}">
-                        <p:submenu label="Location" >
-                            <p:menuitem value="Add A Location" url="addnewlocation.xhtml"/>
-                            <p:menuitem value="View All Locations" url="viewalllocation.xhtml"/>
+                        <p:submenu label="Facilities Management" >
+                            <p:menuitem value="Add New Facility" url="addnewlocation.xhtml"/>
+                            <p:menuitem value="View All Facilities" url="viewalllocation.xhtml"/>
                         </p:submenu>
                         <p:submenu label="Transportation Asset Management" >
-                            <p:menuitem value="Add Transportation Assets" url="addnewtasset.xhtml" />
+                            <p:menuitem value="Add Transportation Assets" url="addnewtasset.xhtml" style="background:#aa5050; color:white"/>
                             <p:menuitem value="Location Dashboard" url="viewalltasset.xhtml" />
                         </p:submenu>
                         <p:submenu label="Asset Dispatching" >
-                            <p:menuitem value="Dispatch a Asset" url="addnewtassetschedule.xhtml" style="background:#aa5050; color:white"/>
+                            <p:menuitem value="Dispatch a Asset" url="addnewtassetschedule.xhtml" />
                             <p:menuitem value="View Current Tasks" url="viewalltassetschedule.xhtml" />
                         </p:submenu>
                     </c:if>
