--- a/MerlionPortal/MerlionPortal-war/web/tms/transportationservicefulfillmentcheck.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/transportationservicefulfillmentcheck.xhtml
@@ -36,9 +36,9 @@
                         <p:menuitem value="TMS Home" url="tmsindex.xhtml"/>
                     </p:submenu>                    
                     <c:if test="#{dashboardBean.checkTMSCanManageTransportationAsset() ||dashboardBean.loginedUser.userType == 'superuser'}">
-                        <p:submenu label="Location" >
-                            <p:menuitem value="Add A Location" url="addnewlocation.xhtml"/>
-                            <p:menuitem value="View All Locations" url="viewalllocation.xhtml"/>
+                        <p:submenu label="Facilities Management" >
+                            <p:menuitem value="Add New Facility" url="addnewlocation.xhtml"/>
+                            <p:menuitem value="View All Facilities" url="viewalllocation.xhtml"/>
                         </p:submenu>
                         <p:submenu label="Transportation Asset Management" >
                             <p:menuitem value="Add Transportation Assets" url="addnewtasset.xhtml" />
@@ -95,9 +95,9 @@
 
         <ui:define name="right">
             <p:breadCrumb>
-                <p:menuitem value="CRMS Home" url="crmsindex.xhtml" />
-                <p:menuitem value="View All Orders" url="viewallservicepos.xhtml" />
-                <p:menuitem value="Generate Service Invoice" url="generateserviceinvoice.xhtml" />
+                <p:menuitem value="TMS Home" url="tmsindex.xhtml" />
+                <p:menuitem value="Transportation Service Fulfillment Check" url="tmsindex.xhtml" />
+                <p:menuitem value="Fulfillment Check" url="transportationservicefulfillmentcheck.xhtml" />
             </p:breadCrumb>
             <h:form id="form1" >
                 <p:ajaxStatus style="width:16px;height:16px;">
