dashboard user box ui modification

--- a/MerlionPortal/MerlionPortal-war/web/user/dashboard.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/user/dashboard.xhtml
@@ -17,7 +17,10 @@
         </ui:define>
 
         <!-- Override Content -->
-
+        <ui:define name="left">
+            <div>Welcome to Merlion Portal!</div>
+            <p>Please select a service from the right to proceed.</p>
+        </ui:define>
 
         <ui:define name="right">
             <div class="tile-area">
