--- a/MerlionPortal/MerlionPortal-war/web/admin/dashboard.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/dashboard.xhtml
@@ -14,6 +14,12 @@
                 <script src="${request.contextPath}/js/dashboard.js" type="text/javascript"></script>
             </ui:insert>
         </ui:define>
+        
+        <ui:define name="left">
+            <div class="dashboard-welcome">
+                <h5><span class="glyphicon glyphicon-tree-conifer"></span> Welcome to Merlion Portal!</h5>
+            </div>
+        </ui:define>
 
         <!-- Override Right Container -->
         <ui:define name="right">
