--- a/MerlionPortal/MerlionPortal-war/web/tms/tmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/tmsindex.xhtml
@@ -91,6 +91,10 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="TMS Home" url="tmsindex.xhtml" />
+
+            </p:breadCrumb>
 
             <div class="system-banner tms-system-banner"></div>
 
