--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewtorder.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewtorder.xhtml
@@ -108,7 +108,7 @@
                             <h:outputText value="" />
                         </f:facet>
                     </p:ajaxStatus>
-                    <p:panelGrid columns="3">
+                    <h:panelGrid columns="3">
 
                         <p:outputLabel value="Transportation Type: " /><p:spacer width="20" height="20" />
                         <p:selectOneRadio  value="#{tOrderManagerBean.cargoType}">
@@ -137,17 +137,12 @@
                             <f:selectItems value="#{tOrderManagerBean.origins}" var="origin" itemLabel="Name:#{origin.locationName}"  itemValue="#{origin.locationId}"/>
                         </p:selectOneMenu>
 
-                        <h:outputLabel for="referenceId" style="font-weight: bold" value="Document No.:  " /><p:spacer width="20" height="20" />
+                        <h:outputLabel for="referenceId" style="font-weight: bold" value="Service SO No.:  " /><p:spacer width="20" height="20" />
 
                         <p:inputText required="true" label="nodeType" requiredMessage="Documenet No. is required." id="referenceId" value="#{tOrderManagerBean.referenceId}">
                             <f:validateLength minimum="1" maximum="19" />
                         </p:inputText>
 
-                        <h:outputLabel for="referenceType" style="font-weight: bold" value="Document Type:  " /><p:spacer width="20" height="20" />
-
-                        <p:inputText required="true" label="nodeType" requiredMessage="Reference Type is required." id="referenceType" value="#{tOrderManagerBean.referenceType}">
-                            <f:validateLength minimum="1" maximum="19" />
-                        </p:inputText>
                         <p:outputLabel for="startDate" value="Expected Shipping Date " /><p:spacer width="20" height="20" />
 
                         <p:calendar id="startDate" required="true" requiredMessage="Start Date is required" value="#{tOrderManagerBean.timeStart}" pattern="dd-MM-yyyy" mask="true" mindate="#{tAssetScheduleManagerBean.today}" />
@@ -158,13 +153,14 @@
 
 
 
-                        <p:outputLabel value="Operator Id: " /><p:spacer width="20" height="20" />
+                        <p:outputLabel value="Creator(You) Id: " /><p:spacer width="20" height="20" />
 
                         <h:outputText value="#{tOrderManagerBean.creatorId}" />
 
 
 
-                    </p:panelGrid>
+                    </h:panelGrid>
+                    <br></br>
                     <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
                     <p:commandButton id="btn" value="Create New Transportation Order" update="form" actionListener="#{tOrderManagerBean.createNewOrder(order)}" ajax="true" >
                     </p:commandButton>
