--- a/MerlionPortal/MerlionPortal-war/web/tms/viewalltasset.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewalltasset.xhtml
@@ -97,7 +97,7 @@
                 <p:menuitem value="Location Dashboard" url="viewalltasset.xhtml" />
             </p:breadCrumb>
             <h:form id="form">
-                <p:panel id="panel" header=" View Transportation Asset for A Location">
+                <p:panel id="panel" header="Location Dashboard">
                     <p:ajaxStatus style="width:16px;height:16px;">
                         <f:facet name="start">
                             <h:graphicImage value="/img/load.gif" />
