--- a/MerlionPortal/MerlionPortal-war/web/tms/viewconnection.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewconnection.xhtml
@@ -97,6 +97,16 @@
                 <p:menuitem value="View Connections" url="viewconnection.xhtml" />
             </p:breadCrumb>
             <h:form id="form">
+                <h:form>
+                    <p:mindmap value="#{nodeViewEditManagedBean.root}" style="width: 100%; height: 400px; border: 1px;">
+                        <p:ajax event="select" listener="#{nodeViewEditManagedBean.onNodeSelect}" />
+                        <p:ajax event="dblselect" listener="#{nodeViewEditManagedBean.onNodeDblselect}" update="output" oncomplete="PF('details').show();" />
+                    </p:mindmap>
+
+                    <p:dialog widgetVar="details" header="Node Details" resizable="false" modal="true" showEffect="fade" hideEffect="fade">
+                        <h:outputText id="output" value="#{nodeViewEditManagedBean.selectedNode.data}" />
+                    </p:dialog> 
+                </h:form>
 
                 <p:dataTable id="node" var="node" sortMode="multiple" editable="true" value="#{nodeViewEditManagedBean.nodes}" 
                              widgetVar="nodesTable"
